# PRiR

./: .gitignore  CMakeLists.txt  README.md
ex1/: description.md  generator-public.cpp  instrukcja.txt
exc/ex1/: 01-description.md  CMakeLists.txt  LifeParallelImplementation.cpp  LifeParallelImplementation.h  Main.cpp  kompilacja.txt
exc/ex2/: 01-description.md
exc/ex2/src/: ParallelEmployer.java
exc/ex3/src/: Binder.java  RMIHistogram.java  Tester.java  TesterClient.java
exc/ex4/: Simulation.cpp  compileAndRun.sh
lab/IPC/: Filozofowie.cpp  avg-public.cpp  common.h
